# Standard

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SUMMARY.md  draft-jsonagents-spec-00.md  json-agents.md
docs/: extensions.md  implementers-guide.md  index.md  mapping-frameworks.md
examples/: core-exec-gov-graph.json  core-exec-gov.json  core-exec.json
registry/: capabilities.json  extensions.json  profiles.json  tool-types.json
schema/: json-agents.json  message-envelope.json
schema/capabilities/: retrieval.json  routing.json  summarization.json
schema/extensions/: audit.json  memory.json
validators/: README.md
validators/python/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PURPOSE.md  README-VALIDATOR.md  README.md  TEST-RESULTS.md  VALIDATOR-STATUS.md  pyproject.toml  requirements.txt  test_manual.py
validators/python/jsonagents/: __init__.py  cli.py  policy.py  uri.py  validator.py
validators/python/jsonagents/schemas/: json-agents.json
validators/python/tests/: test_policy.py  test_uri.py  test_validator.py
