[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonagents"
version = "1.0.0"
description = "Official validator for JSON Agents (Portable Agent Manifest) specification"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "JSON Agents Contributors", email = "spec@jsonagents.org" }
]
keywords = [
    "json-agents",
    "agent",
    "ai",
    "validation",
    "schema",
    "manifest",
    "portable-agent-manifest",
    "pam"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonschema>=4.20.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://jsonagents.org"
Documentation = "https://github.com/JSON-AGENTS/Standard"
Repository = "https://github.com/JSON-AGENTS/Validators"
"Bug Tracker" = "https://github.com/JSON-AGENTS/Validators/issues"

[project.scripts]
jsonagents = "jsonagents.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jsonagents"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=jsonagents --cov-report=term-missing"
